Dummy data createdAt property changed to timestamp instead of string utils.js added: util functions util function for calculating elapsed time in seconds between 2 timestamp util function for calculating approximate elapsed time based on the elapsed seconds (for ex 150 seconds = approx. 2 minutes) using the approximate elapsed time in the CommentContent component in order to display the elapsed time on new comment adding the actual timestamp instead of the 'now' string on tablet landscape display (or lower), the font size of the elapsed time is reduced a bit more responsivity for the comment content actions and details (actions pushed to the edge of the comment, and on smaller screens the gap from actions and from details is reduced a bit, thus preventing the texts from colliding) TODO: animations

--- a/src/components/Comment/Comment.module.scss
+++ b/src/components/Comment/Comment.module.scss
@@ -95,9 +95,13 @@
       align-items: center;
       gap: 1.4rem;
 
+      @include mixins.respond(tab-land) {
+        gap: 0.7rem;
+      }
+
       @include mixins.respond(tab-port) {
         grid-column: 1/-1;
-        gap: 0.7rem;
+        gap: 0.5rem;
       }
 
       & > * {
@@ -126,17 +130,27 @@
           padding: 0 0.5rem;
         }
       }
+
+      &__created-at {
+        @include mixins.respond(tab-land) {
+          font-size: 1.4rem;
+        }
+      }
     }
 
     &__actions {
       grid-row: 1;
-      grid-column: 3;
+      grid-column: 4;
       justify-self: end;
 
       display: flex;
       justify-content: flex-end;
       align-items: center;
       gap: 3rem;
+
+      @include mixins.respond(tab-land) {
+        gap: 2rem;
+      }
 
       @include mixins.respond(tab-port) {
         grid-row: 4;
